# ratamud

./: .gitignore  .sconsign.dblite  CROSS_PLATFORM_ARCHITECTURE.md  C_ABI_README.md  Cargo.toml  EVENT_FINAL_SUMMARY.md  EVENT_INTEGRATION.md  EVENT_SYSTEM_DESIGN.md  EVENT_SYSTEM_SUMMARY.md  EVENT_USAGE.md  FINAL_SUMMARY.md  MINIMAP_FIX.md  NPC_DUPLICATION_FIX.md  README.md  SConstruct  STAGE1_COMPLETE.md  SUMMARY.md  UPDATE.md  aaa  build_and_test.sh  build_and_test_windows.ps1  build_dylib.sh  build_frameworks.sh  build_ios_framework.sh  check_build.sh  check_game.sh  demo_npc_talk.sh  package-lock.json  quick_build.sh  quick_test_npc_talk.sh  save.txt  test_age.txt  test_combat_loop.sh  test_combat_loop_windows.ps1  test_command_history.sh  test_ctrl.sh  test_hunger.txt  test_ios_build.sh  test_item_system.sh  test_map.sh  (+5 more)
Docs/: APP_RS_REFACTORING.md  BUILD_STATUS.md  CALLBACK_USAGE.md  CROSS_PLATFORM_ARCHITECTURE.md  C_ABI_GUIDE.md  C_ABI_README.md  DIALOGUE_CONDITION_FIX.md  ENGINE_DECOUPLING.md  EVENT_DRIVEN_RULE.md  EVENT_FIX_REPORT.md  EVENT_SYSTEM_STATUS.md  EVENT_THREAD_IMPLEMENTATION.md  FINAL_SUMMARY.md  FIX_CHINESE_INPUT.md  FIX_CONTROL_ISSUE.md  FIX_NPC_MAP_ISSUE.md  IMPLEMENTATION_LOG.txt  INDEX.md  IOS_FRAMEWORK_README.md  NPC_AI_IMPLEMENTATION.md  NPC_AI_THREAD.md  NPC_AI_THREAD_SUMMARY.md  NPC_DIALOGUES_COMPLETE.md  NPC_DIALOGUES_LIST.md  NPC_DUPLICATION_FIX.md  NPC_LOADING_FIX.md  NPC_TALK_FEATURE.md  NPC_TALK_IMPLEMENTATION.md  NPC_TALK_QUICKSTART.md  README.md  README_DIALOGUE.md  RELATIONSHIP_SYSTEM.md  RENAME_LOG.md  SCONS_README.md  SDL_SYNTAX.md  (+29 more)
(+149 files in other folders)
