[package]
name = "ratatui_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "genmap"
path = "src/bin/genmap.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.19"
