[package]
name = "ratamud"
version = "0.1.0"
edition = "2021"

[lib]
name = "ratamud"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[features]
default = ["terminal-ui"]
terminal-ui = ["ratatui", "crossterm"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.19"

# Terminal UI dependencies (optional)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
